@@ -617,6 +617,49 @@ name|nread
 init|=
 literal|0
 decl_stmt|;
+name|long
+name|totalRead
+init|=
+literal|0
+decl_stmt|;
+name|DFSInputStream
+name|dfstm
+init|=
+literal|null
+decl_stmt|;
+if|if
+condition|(
+name|stm
+operator|.
+name|getWrappedStream
+argument_list|()
+operator|instanceof
+name|DFSInputStream
+condition|)
+block|{
+name|dfstm
+operator|=
+call|(
+name|DFSInputStream
+call|)
+argument_list|(
+name|stm
+operator|.
+name|getWrappedStream
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|totalRead
+operator|=
+name|dfstm
+operator|.
+name|getReadStatistics
+argument_list|()
+operator|.
+name|getTotalBytesRead
+argument_list|()
+expr_stmt|;
+block|}
 while|while
 condition|(
 name|nread
@@ -658,6 +701,31 @@ expr_stmt|;
 name|nread
 operator|+=
 name|nbytes
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|dfstm
+operator|!=
+literal|null
+condition|)
+block|{
+name|assertEquals
+argument_list|(
+literal|"Expected read statistic to be incremented"
+argument_list|,
+name|length
+argument_list|,
+name|dfstm
+operator|.
+name|getReadStatistics
+argument_list|()
+operator|.
+name|getTotalBytesRead
+argument_list|()
+operator|-
+name|totalRead
+argument_list|)
 expr_stmt|;
 block|}
 block|}
